# leeg

./: .gitignore  README.md  alex_last_500.csv  champion_roles.json  champions.json  dans_last_100.csv  matches.csv  matches_short.csv  redis.conf  scraper.py  spider.py  spider_classes.py  spider_utils.py  spidered_match_vectors_doublelift.csv  spidered_match_vectors_sleepo.csv  summoner_history.py  team_nn_test.py
doc/: models.tex
scripts/python/: database.ini.sample  db_utils.py  import_champs_to_db.py  league_spider.py  spider.py  spider_classes.py  spider_utils.py  summoner_history.py  summoner_mastery.py  summoner_matches.csv
scripts/sql/: champion_table.sql  champion_winrate_view.sql  create_match_tables.sql  mastery_table.sql
src/java/client-listener/: pom.xml
src/javascript/: index.css  index.html  index.js  package.json
src/javascript/reqme/: .babelrc  index.css  index.js  package-lock.json  package.json  webpack.config.js
src/javascript/reqme/scss/: championlist.scss  colors.scss  index.scss  loader.scss  topbar.scss
src/javascript/websocket-test/: package-lock.json  test.js
src/rust/: Dockerfile  app.yaml  env_variables.yaml.sample
src/rust/banana/: Cargo.toml  Db_config.toml.sample  README.md
src/rust/banana/src/: main.rs
src/rust/reqs/: Cargo.toml
src/rust/reqs/src/: champions.rs  lib.rs  main.rs  matches.rs  reqs.rs  scores.rs  summoner.rs  winrates.rs
src/rust/reqs/src/utils/: argmax.rs  bool_deserializer.rs  mod.rs  postgres_utils.rs  redis_utils.rs  riot_api_utils.rs  string.rs  summoner_utils.rs  vec_deserializer.rs
(+35 files in other folders)
