[package]
name = "banana"
version = "0.1.0"
authors = ["Alex Sherman <me.alexsherman@gmail.com>"]
edition = "2018"

[dependencies]
reqs = { path = "../reqs"}
rocket = "0.4.0"
r2d2 = "0.8.5"
r2d2_postgres = "0.14.0"
postgres = "0.15"
log = "0.4.8"
env_logger = "0.6.2"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "postgres_pool"]

