[package]
name = "reqs"
version = "0.1.0"
authors = ["dmcfalls <dan.mcfalls4@gmail.com>"]

[lib]
name = "reqs"
path = "src/lib.rs"

[[bin]]
name = "reqsbin"
path = "src/main.rs"

[dependencies]
serde = "1.0.55"
serde_derive = "1.0.55"
serde_json = "1.0.39"
csv = "1.0.7"
chrono = "0.4"
toml = "0.4.2"
itertools = "0.8"
redis = "0.10.0"
reqwest = "0.9.18"
simple-error= "0.1"
crossbeam = "0.6.0"
r2d2 = "0.8.5"
r2d2_postgres = "0.14.0"

[dependencies.postgres]
version = "0.15"
features = ["with-chrono"]
